<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/item_image_view"
        android:layout_width="100dp"
        android:layout_height="139dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_content_description" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/name_label" />

        <TextView
            android:id="@+id/item_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/set_label" />

        <TextView
            android:id="@+id/item_set_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/number_label" />

        <TextView
            android:id="@+id/item_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </GridLayout>
</LinearLayout>