<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentPrimaryDark"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_image_view"
            android:layout_width="223dp"
            android:layout_height="310dp"
            android:layout_margin="10dp"
            android:background="@color/colorTransparentAccent"
            android:contentDescription="@string/image_content_description" />

        <TextView
            android:id="@+id/card_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorTransparentAccent"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorTransparentAccent"
                android:columnCount="2"
                android:useDefaultMargins="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/name_label" />

                <TextView
                    android:id="@+id/card_name_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/set_label" />

                <TextView
                    android:id="@+id/card_set_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/number_label" />

                <TextView
                    android:id="@+id/card_number_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/mana_cost_label" />

                <TextView
                    android:id="@+id/card_mana_cost_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/type_label" />

                <TextView
                    android:id="@+id/card_type_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/rarity_label" />

                <TextView
                    android:id="@+id/card_rarity_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </GridLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>